<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>spacenav_teleop_needle_controller</name>
    <version>0.1.0</version>
    <description>A ROS2 controller for teleoperating a robotic needle using a Space Navigator (3D mouse)</description>

    <maintainer email="sleonard@jhu.edu">Simon Leonard</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>control_msgs</depend>
    <depend>controller_interface</depend>
    <depend>eigen3_cmake_module</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>